Add managed, staff-authorized ATC catalogue content workspace
